# plantbrain-fastml

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
docs/source/: api.rst  index.rst  installation.rst  usage.rst
plantbrain-fastml/: pyproject.toml  setup.py
plantbrain-fastml/plantbrain-fastml/base/: base_regressor.py
plantbrain-fastml/plantbrain-fastml/models/regressors/: linear_regression.py
plantbrain-fastml/plantbrain-fastml/utils/: metrics.py
plantbrain_fastml/base/: base_classifier.py  base_forecaster.py  base_regressor.py  model_manager_mixin.py
plantbrain_fastml/config/: deafults.py
plantbrain_fastml/managers/: classifier_manager.py  regressor_manager.py
plantbrain_fastml/models/classifiers/: logistic_regression.py  random_forest_classifier.py  svc.py
plantbrain_fastml/models/forecasters/: arima.py  exp_smotthing.py
plantbrain_fastml/models/regressors/: random_forest.py
plantbrain_fastml/plantbrain_fastml/base/: model_manager_mixin.py
plantbrain_fastml/utils/: metrics.py
tests/: arima_model_transformer.pkl  forecast_test.ipynb  regressor_test.ipynb  test1.py
