[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plantbrain-fastml"
version = "0.1.0"
description = "An AutoML package by plantBrain with classification, regression, and forecasting support."
authors = [
    { name = "plantBrain Team", email = "dev@plantbrain.ai" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "scikit-learn>=1.1",
    "pandas>=1.3",
    "numpy>=1.21",
    "xgboost>=1.6",
    "lightgbm>=3.3",
    "statsmodels>=0.13",  # For forecasting
    "matplotlib>=3.5",     # Optional for visualizations
    "joblib>=1.2"          # Optional for model persistence
]

[project.urls]
Homepage = "https://github.com/ALGO8AI/plantbrain-fastml.git"
Documentation = "https://github.com/ALGO8AI/plantbrain-fastml.git"
Source = "https://github.com/ALGO8AI/plantbrain-fastml.git"
